# prueba-modular-gtkmm4

./: CMakeLists.txt
include/: subventana1.hpp  subventana2.hpp  ventana_main.hpp
src/: main.cpp  subventana1.cpp  subventana2.cpp  ventana_main.cpp
ui/: main.cmb  main.ui  subventana1.ui  subventana2.ui
